{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 7,
  "lineage": "e75c5394-751f-e3d4-1cd9-4dd8bd3758d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:842905459753:vpc/vpc-0cc30a0df52e676a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-06f71c4228f3f8aab",
            "default_route_table_id": "rtb-0e65cab8cefb016f1",
            "default_security_group_id": "sg-0eb3085baded66486",
            "dhcp_options_id": "dopt-0784c1b33a404331b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0cc30a0df52e676a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e65cab8cefb016f1",
            "owner_id": "842905459753"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052387465d846f3fc",
            "arn": "arn:aws:ec2:eu-north-1:842905459753:instance/i-08df6668e4e2101be",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08df6668e4e2101be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c5948168d85db6e",
            "private_dns": "ip-172-31-40-187.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.187",
            "public_dns": "ec2-13-51-168-121.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.168.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a60a5dfd9da0373f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "WebServer Security Group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d804a6b692c0b316",
            "tags": {
              "Name": "Apache WebServer",
              "Owner": "Nikita",
              "Project": "Terraform Lesson 2"
            },
            "tags_all": {
              "Name": "Apache WebServer",
              "Owner": "Nikita",
              "Project": "Terraform Lesson 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c4500e9442ed2ac"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.webserver_80"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:842905459753:security-group/sg-02c4500e9442ed2ac",
            "description": "My First Security Group",
            "egress": [],
            "id": "sg-02c4500e9442ed2ac",
            "ingress": [],
            "name": "WebServer Security Group",
            "name_prefix": "",
            "owner_id": "842905459753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow 80 to whole internet",
              "Owner": "Nikita",
              "Project": "Terraform Lesson 2"
            },
            "tags_all": {
              "Name": "Allow 80 to whole internet",
              "Owner": "Nikita",
              "Project": "Terraform Lesson 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc30a0df52e676a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:842905459753:security-group-rule/sgr-0fa214eeba90c6a84",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fa214eeba90c6a84",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c4500e9442ed2ac",
            "security_group_rule_id": "sgr-0fa214eeba90c6a84",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.webserver_80"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_443_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:842905459753:security-group-rule/sgr-039f2bc336b9776e3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-039f2bc336b9776e3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c4500e9442ed2ac",
            "security_group_rule_id": "sgr-039f2bc336b9776e3",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.webserver_80"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_80_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:842905459753:security-group-rule/sgr-0c81fc108ea0493c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c81fc108ea0493c5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c4500e9442ed2ac",
            "security_group_rule_id": "sgr-0c81fc108ea0493c5",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.webserver_80"
          ]
        }
      ]
    }
  ]
}